examples/test/testpolicy8768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8768
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key23: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value30
      podSelector:
        matchLabels:
          key19: value16
          key46: value23
          key40: value41
